fix(spring-data): translate in-lists containing null per CEL semantics (#288)
An `in`-list containing `null` — legal CEL that compiles and plans — was
translated by passing the raw null into `path.in(...)`, producing SQL
whose three-valued semantics silently diverge from `check()`. Finding
13/28 from an internal adversarial review of the spring-data adapter.

## Which Hibernate branch is real

Determined empirically (Hibernate 6.6.x, H2/PostgreSQL/MySQL): Hibernate
does **not** reject the null literal at criteria-build time — it renders
`IN ('a', NULL)`. So the failure mode is the **silent under-return**
branch, not the crash branch:

- `owner IN ('x', 'one_two', NULL)` — NULL rows never match (`NULL = x`
is UNKNOWN): rows `check()` ALLOWS are silently dropped.
- Negated, it is worse: `NOT(IN (..., NULL))` is UNKNOWN for **every
non-matching row**, so the negated filter returned **zero rows**.
- The Relation-mapped path (`null in R.attr.collection`) did crash — an
NPE in `asList` (`List.of(null)`), i.e. every query for that plan threw.

## PDP-verified wire + check() facts (scratch PDP,
`ghcr.io/cerbos/cerbos:latest`)

- `R.attr.owner in ["a", null]` **emits verbatim**: `in(variable, value
["a", null])`. The negation wraps it in `not(...)` unchanged.
- The degenerate `R.attr.owner in [null]` is **planner-folded to
`eq(owner, null)`** — which this adapter already translates as `IS
NULL`. The planner itself equates a null list element with the null
equality, forcing the translation below for consistency.
- `null in R.attr.items` (collection membership, null needle) emits
verbatim as `in(value null, variable)`.
- `hasIntersection(R.attr.xs, ["public", null])` also emits verbatim,
and `check()` ALLOWS `xs=[null]` — a null element intersects a null
element.

check() verdict table for `owner in ["a", null]` and its negation:

| owner | `in ["a", null]` | `!(in ["a", null])` |
|---|---|---|
| `"a"` | ALLOW | DENY |
| `null` (explicit) | ALLOW | DENY |
| `"b"` | DENY | ALLO